css/SettingsDrawer.css
body {
    margin: 0;
    padding: 0;
    font-family: "Open Sans", sans-serif
}

#setting-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;   
}

.setting-container {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    overflow: auto;
}

.header {
    position: relative;
    flex: 0 0 7rem;
    order: 1;
    background-color: antiquewhite
}

.header-cover {
    position: absolute;
    width: 100%;
    height: 100%;
}

.header-cover>.cover {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.behigh {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: transparent;
    z-index: 1;
}

.brows-box{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.brows-icon-box{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: .2rem;
    right: .2rem;
    background-color: rgb(216, 216, 216);
    color: rgb(0, 0, 0);
    font-size: .8rem;
    padding: .6rem;
    border-radius: 50%;
    border: solid .1rem rgba(255, 255, 255, 1);
    z-index: 1;
}

.brows-icon-box-desktop{
   position: absolute;
   height: 100%;
   width: 100%;
   bottom: 0;
   right: 0;
   background: transparent;
   border-radius: 50%;
   z-index: 1;
}

#profile{
    display: none;
}

.header-box {
    position: absolute;
    display: flex;
    align-items: start;
    justify-content: start;
    width: 100%;
    height: 100%;
    background: linear-gradient(to bottom, rgba(255, 255, 255, .1) 0%, rgba(173, 173, 173, .4) 80%, rgba(125, 124, 125, .7) 100%);
}

.back-box {
    display: flex;
    padding: 1rem;
}

.back-button {
    color: white;
}

.title {
    margin-left: .6rem;
    color: white;
}

.profile-content {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile-box {
    position: absolute;
    top: 3rem;
    width: 8.6rem;
    height: 8.6rem;
    background-color: white;
    box-shadow: 0 0rem .8rem -.2rem rgba(77, 77, 77, .5);
    border-radius: 50%;
    z-index: 1;
    border: solid .1rem white;
}

.profile-box> img{
    border-radius: 50%;
}

.profile-box-choose {
    position: absolute;
    top: 3rem;
    width: 8.6rem;
    height: 8.6rem;
    background-color: white;
    box-shadow: 0 0rem .8rem -.2rem rgba(77, 77, 77, .5);
    border-radius: 50%;
    z-index: 1;
    overflow: hidden;
    border: solid .1rem white;
}

.profile {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.content {
    position: relative;
    flex: 2 2 auto;
    order: 1;
    box-sizing: border-box;
    padding-top: 6rem;
}

.panel {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

.username-box {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 3.5rem;
}

.username {
    flex: 0 0 50%;
    font-size: 1.2rem;
}

.about {
    flex: 1 1 auto;
    margin-top: .4rem;
    font-size: .8rem;
    color: #6B6B6B;
}

.control-content {
    position: relative;
    overflow: hidden;
    height: auto;
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
}

.control-inside {
    position: relative;
    display: flex;
    flex: 0 0 auto;
    flex-direction: column;
    padding-left: .6rem;
    padding-right: .6rem;
}

.control-box {
    display: flex;
    flex-direction: column;
    height: 5rem;
    margin-bottom: .8rem;
    border-radius: .6rem;
    border: solid 0.08rem rgba(167, 167, 167, 0.2);
    box-shadow: 0rem .1rem .45rem -.2rem rgba(77, 77, 77, .25);
    box-sizing: border-box;
    padding: .4rem .8rem;
    color: #6B6B6B;
}

._title-box {
    flex: 0 0 2rem;
}

._title-box>span {
    font-size: .8rem;
}

._control {
    flex: 1 1 auto;
}

.input-box {
    position: relative;
    display: flex;
    align-items: center;
    font-size: 1rem;
    height: 90%;
}

.edit-able .input-box {
    border-bottom: solid .08rem rgb(163, 163, 163);
}

.input {
    flex: 1 1 auto;
    outline: none;
}

.input::selection { background: rgb(238, 138, 138) }

.icbox{
    position: relative;
    padding: .5rem 0;
    height: 100%;
    width: 2rem;
    box-sizing: border-box;
}

.ico-box {
    position: absolute;
    font-size: .8rem;
    color: #EB5050;
    right: 0;
}

.signout-box {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    flex: 1 1 auto;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 4rem;
    box-sizing: border-box;
    padding-left: .6rem;
    padding-right: .6rem;
    margin-bottom: 1rem;
}

.btn-signout, .btn-signout-desktop {
    position: relative;
    width: 100%;
    height: 2.8rem;
    outline: none;
    border: solid 1px rgba(226, 19, 19, .4);
    border-radius: .6rem;
    background-color: rgba(226, 19, 19, 0.698);
    color: white;
    transition: all .2s;
    font-size: 1.2rem;
}

.btn-signout:active {
    color: rgba(226, 19, 19, 0.698);
    background-color: white;
}

.btn-signout-desktop{
    box-shadow: 0rem .4rem .4rem -.4rem rgba(255, 0, 0, 1);
    transform: translateY(0rem);
    color: rgba(226, 19, 19, 0.698);
    background-color: white;
    border-radius: 2rem;
}
.btn-signout-desktop:hover{
    box-shadow: 0rem .65rem .65rem -.3rem rgba(255, 0, 0, 1);
    transform: translateY(-.3rem)
}

.btn-signout-desktop:active {
    box-shadow: 0rem .4rem .4rem -.4rem rgba(255, 0, 0, 1);
    transform: translateY(0rem);
    color: rgba(226, 19, 19, 0.698);
    background-color: white;
}

@media screen and (min-width: 360px){
    .header{
        flex: 0 0 10rem;
    }
    .profile-box {
        top: 5rem;
        width: 10rem;
        height: 10rem;
    }
    .brows-icon-box{
        bottom: .4rem;
        right: .4rem;
    }
}

@media screen and (min-width: 760px) {
    .header{
        flex: 0 0 14rem;
    }
    .profile-box {
        top: 8rem;
        width: 12rem;
        height: 12rem;
    }
    .brows-icon-box{
        bottom: .6rem;
        right: .6rem;
    }
    .content{
        padding-top: 8rem;
    }
    .control-box{
        height: 6rem;
    }
    ._title-box {
        flex: 0 0 3rem;
    }
    .name{
        font-size: 1.4rem;
    }
    .about{
        font-size: .9rem;
    }
}

[role="button"]{
    cursor: pointer;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent;
}




#edit-panel{
    position: absolute;
    display: flex;
    flex-direction: column;
    bottom: 0;
    left: 0;
    z-index: 10;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.dismise{
    position: relative;
    flex: 1 1 auto;
}

.edit-box{
    position: relative;
    flex: 0 0 2rem;
    display: flex;
    flex-direction: column;
    background-color: white;
    border-radius: .4rem .4rem 0 0;
    padding: 1.4rem
}

.input-border{
    border-bottom: solid .1rem rgb(228, 38, 38);
}

.edit-box .edit-able {
    margin-top: 2rem;
    flex: 0 0 2rem;
}

.edit-box .edit-able .input-box {
    height: 1.6rem;
}

.edit-box .edit-able .input-border{
    border-bottom: solid .1rem rgb(228, 38, 38);
}

.edit-box .edit-able .ico-box {
    font-size: 1rem;
    color: #6B6B6B;
}

.edit-box> ._title-box{
    flex: 0 0 1rem;
}

.submit-box{
    flex: 0 0 1rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-top: 1.6rem;
    margin-bottom: .18rem;
}

.edit-box> ._title-box> span{
    font-size: 1rem;
    font-weight: 600;
}

.submit-box> button{
    color: rgb(228, 38, 38);
    margin-left: 2rem;
    font-size: 1rem;
    font-weight: 700;
    border: none;
    outline: none;
    padding: 0;
    background-color: transparent;
}

